update style and font

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         <img src="assets/images/profile_image.jpg" alt="Amnat Ditkammo - Profile Picture" />
       </div>
       <h1>Amnat Ditkammo</h1>
-      <p>Full-Stack Developer | IoT Developer</p>
+      <p class="terminal-cursor">Full-Stack Developer | IoT Developer</p>
       <div class="header-cta">
         <a href="mailto:amnarj.dit@gmail.com" class="cta-button">
           <i class="fas fa-envelope"></i> Get In Touch
