--- a/index.html
+++ b/index.html
@@ -205,7 +205,7 @@
           </div>
           <div class="item-subtitle">King Mongkut's University Of Technology North Bangkok</div>
           <div class="item-description">
-            <p>Study in automation systems, control engineering, and instrumentation technology</p>
+            <p>Studied in automation systems, control engineering, and instrumentation technology</p>
             <p>Relevant coursework: Embedded Systems, Signal Processing, Industrial Automation</p>
           </div>
         </div>
