--- a/index.html
+++ b/index.html
@@ -43,10 +43,10 @@
                 <i class="fas fa-map-marker-alt"></i>
                 <span>Nakorn Pathom, Thailand</span>
               </div>
-              <!-- <div class="contact-item">
-                <i class="fas fa-phone"></i>
-                <span>Available on request</span>
-              </div> -->
+              <div class="contact-item">
+                <i class="fa-solid fa-globe"></i>
+                <span><a href="https://dear-beyond.web.app/" target="_blank" rel="noopener noreferrer">dear-beyond</a></span>
+              </div>
               <div class="contact-item">
                 <i class="fa-brands fa-linkedin"></i>
                 <span><a href="https://www.linkedin.com/in/amnat-ditkammo-121a171a2/" target="_blank" rel="noopener noreferrer">LinkedIn</a></span>
