--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
             <div class="contact-info">
               <div class="contact-item">
                 <i class="fas fa-envelope"></i>
-                <span>amnarj.dit@gmail.com</span>
+                <span>dit.amnarj@gmail.com</span>
               </div>
               <div class="contact-item">
                 <i class="fas fa-map-marker-alt"></i>
