--- a/index.html
+++ b/index.html
@@ -20,9 +20,9 @@
         <img src="assets/images/profile_image.jpg" alt="Amnat Ditkammo - Profile Picture" />
       </div>
       <h1>Amnat Ditkammo</h1>
-      <p class="terminal-cursor">Full-Stack Developer | IoT Developer</p>
+      <p class="terminal-cursor">Programmer</p>
       <div class="header-cta">
-        <a href="mailto:amnarj.dit@gmail.com" class="cta-button">
+        <a href="mailto:amnat.dit@outlook.com" class="cta-button">
           <i class="fas fa-envelope"></i> Get In Touch
         </a>
       </div>
@@ -37,15 +37,11 @@
             <div class="contact-info">
               <div class="contact-item">
                 <i class="fas fa-envelope"></i>
-                <span>dit.amnarj@gmail.com</span>
-              </div>
-              <div class="contact-item">
-                <i class="fas fa-map-marker-alt"></i>
-                <span>Nakorn Pathom, Thailand</span>
+                <span>amnat.dit@outlook.com</span>
               </div>
               <div class="contact-item">
                 <i class="fa-solid fa-globe"></i>
-                <span><a href="https://dear-beyond.web.app/" target="_blank" rel="noopener noreferrer">dear-beyond</a></span>
+                <span><a href="https://github.com/nodoby1x" target="_blank" rel="noopener noreferrer">Github</a></span>
               </div>
               <div class="contact-item">
                 <i class="fa-brands fa-linkedin"></i>
@@ -303,14 +299,14 @@
               <span class="tech-tag">YOLO</span>
             </div>
             <div class="project-stats">
-              <div class="stat">
+              <!-- <div class="stat">
                 <i class="fas fa-bullseye"></i>
                 <span>90% Accuracy</span>
-              </div>
-              <!-- <div class="stat">
+              </div> -->
+              <div class="stat">
                 <i class="fas fa-clock"></i>
                 <span>80% Time Saved</span>
-              </div> -->
+              </div>
             </div>
           </div>
           
